samples/_failures_safe/1761546923_2d3fc1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3cc3319c.c: In function ‘main’:
./samples/SAFE/__tmp_3cc3319c.c:179:5: error: expected declaration or statement at end of input
  179 |     char input[256];
      |     ^~~~
